# algorithms_and_etc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mlp_res.csv  mlp_res_win.csv
cell_formation_problem/: vns.py
cell_formation_problem/_problems/: 20x20.txt  24x40.txt  30x50.txt  30x90.txt  37x53.txt
cell_formation_problem/_results/: 20x20.sol  24x40.sol  30x50.sol  30x90.sol  37x53.sol
cell_formation_problem/_results/_cfp_logs/: 20x20.sol  24x40.sol  30x50.sol  30x90.sol
cell_formation_problem/_tmp_res/_cfp_logs/: 20x20.sol  24x40.sol  30x50.sol
cell_formation_problem/_tmp_res/_cfp_logs_best/: 24x40.sol  30x50.sol  37x53.sol
cell_formation_problem/_tmp_res/_cfp_logs_vns_general/: 30x50.sol  30x90.sol
cell_formation_problem/_tmp_res/_cfp_logs_vns_general_no_random/: 20x20.sol
cell_formation_problem/lib/: clusters_utils.py  constraints.py  generate_output.py  problem_utils.py  search_utils.py
clique/: CMakeLists.txt  runner.py
clique/cplex/: CMakeLists.txt  branch_and_bound.cpp  branch_and_cut.cpp  mcp_res_linux.csv  mcp_res_linux_medium_graphs.csv
clique/straightforward/: CMakeLists.txt  mlp_res_linux.csv
clique/test/: p_hat1500-1.clq.txt  p_hat300-2.clq.txt  p_hat500-3.clq.txt  p_hat700-1.clq.txt  p_hat700-2.clq.txt  p_hat700-3.clq.txt
clique/test/slow/: p_hat300-3.clq.txt  (+1 more)
quadratic_assignment_problem/: ga.py
quadratic_assignment_problem/_results/: tai100a.sol  tai20a.sol  tai40a.sol  tai60a.sol  tai80a.sol
quadratic_assignment_problem/lib/: constraints.py  generate_output.py  problem_utils.py  search_utils.py
test/: p_hat300-1.clq.txt  p_hat500-1.clq.txt
vehicle_routing_problem/: .gitignore  guided_local_search.py  iterated_local_search.py  requirements.txt
vehicle_routing_problem/lib/: constraints.py  customer.py  exception_handling.py  generate_output.py  graph.py  graph_utils.py  local_search_strategies.py  matrix.py  parser.py  search_utils.py  visualize.py
(+45 files in other folders)
